ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_04_06.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"dominica-of-the-passion\", \"dominica-of-passiontide\"]"
expression: s.0
---
2025-04-06
Second Vespers of Dominica of the Passion:
Vespers:
  Antiphons:   Proper
  Psalms:      Psalter
  Chapter:     Proper
  Hymn:        Proper
  Verse:       Proper
  Magnificat:  Proper
  Collect:     Proper
