ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_04_11.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"feria-vi-of-passion-week\", \"feria-of-passiontide\"]"
expression: s.0
---
2025-04-11
Vespers of Feria VI of Passion Week:
Vespers:
  Antiphons:   Psalter (Ordinary of Passiontide)
  Psalms:      Psalter
  Chapter:     Psalter (Ordinary of Passiontide)
  Hymn:        Psalter (Ordinary of Passiontide)
  Verse:       Psalter (Ordinary of Passiontide)
  Magnificat:  Psalter (Ordinary of Passiontide)
  Collect:     of Sunday
